maj loterie pour site en ligne

--- a/vue/404.html
+++ b/vue/404.html
@@ -53,7 +53,7 @@
     <div class="container">
         <h1>404</h1>
         <p>Désolé, la page que vous recherchez est introuvable.</p>
-        <a href="/lafleur/index.php?page=accueil">Retourner à l'accueil</a>
+        <a href="/site_lafleur/index.php?page=accueil">Retourner à l'accueil</a>
     </div>
 </body>
 
